<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/buttonSaveData"
            android:layout_width="148dp"
            android:layout_height="57dp"
            android:layout_marginStart="131dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="132dp"
            android:backgroundTint="#2196F3"
            android:text="Save Data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSnacks" />

        <Button
            android:id="@+id/buttonHomePageMain"
            android:layout_width="148dp"
            android:layout_height="57dp"
            android:layout_marginStart="131dp"
            android:layout_marginTop="131dp"
            android:layout_marginEnd="132dp"
            android:backgroundTint="#2196F3"
            android:text="Home Page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSaveData" />

        <EditText
            android:id="@+id/editTextFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Food"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDay" />

        <EditText
            android:id="@+id/editTextMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Meal"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDay" />

        <EditText
            android:id="@+id/editTextDrink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Drink"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDay" />

        <EditText
            android:id="@+id/editTextSnacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Snacks"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDay" />

        <TextView
            android:id="@+id/textViewFoodTracker"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Food Tracker"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Day"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFoodTracker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>