<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonViewData"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#2196F3"
        android:text="View Data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTracking" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="289dp"
        android:layout_height="105dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="58dp"
        android:background="#FFFFFF"
        android:text="Welcome To The Food Tracker App"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStartTracking"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#2196F3"
        android:text="Start Tracking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>